# security-scanner

./: .dockerignore  .env.1password.tpl.example  .gitignore  Dockerfile  LICENSE  README.md  SECSCAN-MANIFEST.yaml  SECURITY-SCAN-MANIFEST.yaml  config.example.yaml  pyproject.toml  secscan-spec.md  secscan.sh  security-scan-spec.md  security-scan.sh
.github/workflows/: ci.yml  publish.yml
config/: config.example.yaml
secscan/: __init__.py  __main__.py  config.py  cross_validate.py  detect.py  fingerprint.py  github.py  main.py  models.py  normalize.py  notify.py  sync.py  triage.py
secscan/rules/: python.yaml  sqli.yaml  xss.yaml
secscan/runners/: __init__.py  codex.py  gemma.py  gitleaks.py  osv.py  syft.py  trivy.py  trufflehog.py
security_scan/: __init__.py  __main__.py  config.py  cross_validate.py  detect.py  fingerprint.py  github.py  main.py  normalize.py  notify.py  redact.py  sync.py  triage.py
security_scan/rules/: javascript.yaml  secrets.yaml  supabase.yaml
security_scan/runners/: codex.py  gemma.py  gitleaks.py  image.py  osv.py  semgrep.py  supabase_lints.py  supabase_live.py  supply_chain.py  syft.py  trufflehog.py
skill/: SKILL.md  install.sh
skill/references/: CONFIG.md  README.md  RUN.md
tests/: test_codex_runner.py  test_config.py  test_cross_validate.py  test_detect.py  test_e2e_dryrun.py  test_fingerprint.py  test_gemma_runner.py  test_github.py  test_image_runner.py  test_main.py  test_models.py  test_new_scanners.py  test_normalize.py  test_notify.py  test_redact.py  test_resolve_rules.py  test_runners.py  test_supabase_live.py  test_supply_chain_runner.py  test_sync.py  test_triage.py
tests/fixtures/: trufflehog.jsonl
tests/fixtures/sarif/: gitleaks.json  osv.json  semgrep.json  trivy.json
tools/: backfill_markers.py
