[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "security-scan"
version = "0.2.4"
description = "Stateless single-repo security scanner; files findings into a GitHub Projects v2 board"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
security-scan = "security_scan.main:cli"

[tool.setuptools.packages.find]
include = ["security_scan*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
security_scan = ["rules/**/*.yaml", "rules/**/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = ["E501"]
